<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/image_view_arrow_fragment_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/menu"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_arrow_fragment_cart"
            app:layout_constraintStart_toEndOf="@+id/image_view_arrow_fragment_cart"
            app:layout_constraintTop_toTopOf="@+id/image_view_arrow_fragment_cart" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_cart_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_layout"
            android:paddingTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/image_view_arrow_fragment_cart"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="4dp"
            app:tabMode="scrollable"
            app:tabPaddingEnd="30dp"
            app:tabPaddingStart="30dp"
            app:tabTextAppearance="@style/TabLayoutTextView" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_fragment_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:layout_anchor="@id/tab_layout_cart_fragment"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_payment_fragment_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:backgroundTint="@color/white"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_payment_card"
            app:tint="@color/black"
            android:contentDescription="@string/fab_payment_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
